struggling with the fkin cropper Never give up

--- a/breederCMS/main/templates/main/base_entries.html
+++ b/breederCMS/main/templates/main/base_entries.html
@@ -46,9 +46,7 @@
                 <div class="panel-body">
                     <div class="row">
                         <div class="col-sm-3">
-                            {% load daguerre %}
-                            <img class="img-responsive portrait" src="{% adjust animal.picture 'namedcrop' name='face' %}" />
-                            <!--<img class="img-responsive portrait" src="{{animal.picture.url}}">-->
+                            <img class="img-responsive portrait" src="{{animal.picture.url}}">
                         </div>
                         <div class="col-sm-9">
                             <h4>{{animal.description}}</h4>
