--- a/breederCMS/main/templates/main/base.html
+++ b/breederCMS/main/templates/main/base.html
@@ -53,7 +53,8 @@
 <script src="{% static '/main/js/jquery-3.2.1.min.js' %}"></script>
 <script src="{% static '/main/bootstrap/js/bootstrap.js' %}"></script>
 <script src="{% static '/main/js/gender-select-handler.js' %}"></script>
-
+{% block scripts %}
+{% endblock scripts %}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-select/1.12.2/js/bootstrap-select.min.js"></script>
 <!--<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>-->
 <!--<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>-->
