--- a/breederCMS/main/templates/main/base_contact.html
+++ b/breederCMS/main/templates/main/base_contact.html
@@ -1,3 +1,23 @@
 {% extends "main/base.html" %}
 
+
 {% block title %}Contact{% endblock %}
+
+{%block content%}
+     <div class="row">
+        <div class="col-xs-0 col-sm-2"></div>
+        <div class="col-xs-12 col-sm-8">
+            <h2>Find us here:</h2>
+            <div>
+                <div id="map">
+                    <iframe class="google_maps" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d346190.96592738567!2d18.404034946844018!3d47.32182184627981!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4769f5604fbef145%3A0x400c4290c1e5a30!2sIszkaszentgy%C3%B6rgy!5e0!3m2!1shu!2shu!4v1498133707454&key=AIzaSyCQToYYXryy-v1uWHT5t1Xkd7woWvPdBBg" frameborder="0"></iframe>
+                </div>
+            </div>
+        </div>
+        <div class="col-xs-0 col-sm-2"></div>
+    </div>
+{%endblock content%}
+
+{%block scripts%}
+<!--<script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyCIb6WWQqfwD7q5QwnJV1iMEC8JGqyxfO4&callback=myMap"></script>-->
+{%endblock scripts%}
